--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ html {
     grid-area: main-content;
     display: grid;
     grid-template-columns: 5fr 2fr;
-    grid-template-rows: 2fr 2fr;
+    grid-template-rows 2fr 2fr;
     gap: 20px;
     padding: 50px 25px;
     grid-template-areas:
@@ -140,13 +140,41 @@ html {
 }
 
 .main-div {
-    border: 1px solid;
+    /* border: 1px solid; */
 }
 
 #projects {
     grid-area: projects;
     border-width: 2px;
     border-color: #313131;
+}
+
+#project-cards {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 20px;
+    padding: 0 0;
+}
+
+.project-card {
+    /* border: 1px solid; */
+    background-color: white;
+    width: 90%;
+    height: 150px;
+    border-radius: 5px;
+    padding: 10px 15px;
+    box-shadow: 1px 1px 2px gray;
+
+}
+
+.project-icons {
+    display: flex;
+    justify-content: end;
+}
+
+.fav, .watch, .share {
+    margin: 0 10px;
 }
 
 #announcements {
